Reduktionen und LOOP Zeugs

--- a/src/teachings/es/n-unit-testen.mdx
+++ b/src/teachings/es/n-unit-testen.mdx
@@ -51,7 +51,7 @@ Sind mit Abstand die wichtigsten Tests. Sie testen einzelne Komponenten auf Funk
 
 Eine Bibliothek die hier für Java relevant ist ist: **JUnit**. Beispieltest:
 
-```java
+```java showLineNumbers
 // file AccountTest.java
 import org.junit.*;
 
@@ -73,7 +73,7 @@ Weil es natürlich viel zu einfach wäre einfach die scheiß Tests zu schreiben 
 
 Hier ein Bespiel: Angenommen man haben diesen Code (den ich natürlich nirgendwo gefunden habe (ws 2013))
 
-```java
+```java showLineNumbers
 public static int[] sort(int[] a) {
   int i = 0;
   while (i < a.length -1){
