fix: L_1 tt 06 to nicht-semi-entscheidbar

--- a/src/teachings/scil/Dein-Leben-Problemsammlung.mdx
+++ b/src/teachings/scil/Dein-Leben-Problemsammlung.mdx
@@ -72,7 +72,6 @@ Alle semi-entscheidbaren Probleme (Eigentlich sind *fast* alle unentscheidbaren 
 - $ExpDioph(M)$ | VO
 - **Postsche Korrespondenzproblem** (PKP) | VO
 - MPKP (Modifizierte Postsche Korrespondenzproblem) | VO
-- $L_1 = \{ \langle M \rangle \mid M$ erreicht auf der Eingabe $w$ nie den Zustand $q_2$ $\}$ | Übung 06
 
 ### Nicht semi-entscheidbar
 Ich exkludiere hier die Probleme, wo die Komplemente semi-entscheidbaren Probleme sind. (ist ja lame sonst)
@@ -82,6 +81,7 @@ Ich exkludiere hier die Probleme, wo die Komplemente semi-entscheidbaren Problem
 - $L_2 = \{ \langle M \rangle \mid M$ gibt auf jeder Eingabe 1010 aus $\}$ | Tutorium 06
 - $L_1 = \{ \langle M \rangle w \mid M$ akzeptiert $w$ nicht $\}$ | Übung 06 
 - $L_2 = \{ \langle M \rangle \mid M$ erreicht auf jeder Eingabe den Zustand $q_7 \}$ | Übung 06 
+- $L_1 = \{ \langle M \rangle \mid M$ erreicht auf der Eingabe $w$ nie den Zustand $q_2$ $\}$ | Tutorium 06
 
 ## Komplexität 
  
