--- a/src/teachings/scil/Reduktion-deiner-Note.mdx
+++ b/src/teachings/scil/Reduktion-deiner-Note.mdx
@@ -43,11 +43,9 @@ Das kleiner gleich Zeichen ist praktisch, da wenn z.B. $L_1$ unentscheidbar ist,
 
 Das gilt für alles mögliche:
 - $L_1$ unentscheidbar $\implies$ $L_2$ unentscheidbar
-- $L_1$ semi-entscheidbar $\implies$ $L_2$ semi-entscheidbar
 - Aber auch andersherum: $L_2$ entscheidbar $\implies$ $L_1$ entscheidbar
 - $L_1$ nicht semi-entscheidbar $\implies$ $L_2$ nicht semi-entscheidbar
-- $L_1$ in *NP* $\implies$ $L_2$ in *NP*
-- $L_1$ *NP-vollständig* $\implies$ $L_2$ *NP-vollständig*
+- $L_1$ *NP-schwer* $\implies$ $L_2$ *NP-schwer*
 
 Aber wie funktioniert jetzt eine Reduktion?
 
