--- a/src/teachings/scil/Das-mir-zu-komplex.mdx
+++ b/src/teachings/scil/Das-mir-zu-komplex.mdx
@@ -1,8 +1,76 @@
 ---
-title: Das mir zu Komplex (Komplexitätsbeweise)
+title: Das wird mir hier zu Komplex (Komplexitätsbeweise)
 description: Linus Tech Tips für Komplexitätsbeweise
 author: Jonas Schneider
 date: 19/02/2023
 order: 10
 tags: [Komplexität, Beweise, P, NP]
 ---
+
+# Komplexitätsbeweise
+
+## P
+Hier ist vermutlich einfach das beste eine DTM mit einem Algorithmus anzugeben, der die Lösung findet.
+
+## NP 
+
+Hier muss man einen Verifizierer bauen, das ist tatsächlich häufig einfach ein paar Punkte abzuholen:
+
+Schauen wir uns doch einfach mal das Problem VERTEX_COVER:
+
+> Eingabe: Ein Graph $G = (V, E)$ und eine Zahl $k \in \mathbb{N}$.
+>
+> Frage: Gibt es eine Knotenmenge $D \subseteq V$ mit $|D| \le k$, so dass für jede Kante $(u, v) \in E$ mindestens einer der Endpunkte in $D$ liegt, also $u \in D \land v \in D$?
+
+<Spoiler>
+
+Bauen wir also nun einen Verifizierer:
+
+Für unser Zertifikat raten wir die Knotenmenge $D$ einfach (können wir machen wegen NTM und so). Das kodieren wir dann in einen 0,1-String der Länge $|V|$, wo der i-te Eintrag 1 ist, wenn der i-te Knoten in $D$ ist.
+(Also wir geben unsere Lösung halt irgendwie smart kodiert an)
+
+Dann sagen wir noch das das Zertifikat offensichtlich Polynomiell ist !Nicht vergessen, falls ihr es nicht argumentieren könnt schreib einfach offensichtlich!.
+
+Was muss unser Verifizierer nun machen bei der Eingabe $y\#x$?:
+1. Er überprüft die Syntax.
+2. Er überprüft die Syntax vom Zertifikat
+3. Er überprüft ob $|D| \le k$.
+4. Er überprüft ob für jede Kante $(u, v) \in E$ mindestens einer der Endpunkte in $D$ liegt, also $u \in D \land v \in D$.
+
+Die Laufzeit des Verifizierers hierbei ist:
+1. linear
+2. linear
+3. konstant
+4. offensichtlich polynomiell :D, er muss ja nur über alle Kanten iterieren.
+
+Schon könne wir sagen VERTEX_COVER $\in$ NP.
+
+</Spoiler>
+
+## NP-Schwierigkeit
+
+Der Name ist Programm... Aber nehmen wir mal wieder VERTEX_COVER:
+
+Wir brauchen irgendein NP-schweres Problem, welches von welchem wir dann polynomiell reduzieren (Wir reduzieren immer bei NP-schwer)
+
+Hier nehmen wir einfach mal das CLIQUE Problem... Wir versuchen also CLIQUE $\le_p$ VERTEX_COVER zu zeigen.
+
+<Spoiler>
+
+x> Ich gucke hier morgen nochmal drüber, aber ich glaube das ist so nicht ganz richtig aber gibt trotzdem schonmal ein Einblick.
+
+Wir haben eine Instanz von Clique heißt eine Graphen $G=(V,E)$ und eine Zahl $k \in \mathbb{N}$.
+
+Nun nehmen wir unsere Funktion $f$, $f((G,k))= (G', k')$ mit $G'=(V, ((V \times V) \setminus E \{ (v,v) \mid v \in V \})$ und $k'= |V| - k$.
+
+Was passiert hier?... Wir nehmen uns den Graphen $G$ und bauen uns daraus einen neuen Graphen mit den Gleichen Knoten, der alle Kanten invertiert heißt überall wo vorher eine Kante war ist jetzt keine und überall wo keine war ist jetzt eine.
+
+Warum hilft uns dass?... Remember wir müssen unsere korrekte CLIQUE Instanz auf eine korrekte VERTEX COVER Instanz schicken... Wir finden auf unserem neuen Graphen jetzt eine VERTEX Cover, also ein Knotenmenge, wo alle Kanten mindestens ein Ende mit einem Knoten aus $D$ verbunden ist, weil 
+
+Auch hier ist wieder wichtig zu sagen, dass das offensichtlich polynomiell ist.
+
+Und die Korrektheit zu zeigen:
+
+$(G, k) \in CLIQUE \iff \exists D \subseteq V: |D| \ge k: \forall v,w \in D (v \neq w \implies (v,w) \in E) \iff \exists D' \subseteq V: |D'| \le k': \forall v,w \in D (v \neq w \implies (v,w) \notin E') \iff (G', |V|-k) \in VC$ 
+
+</Spoiler>
