--- a/src/teachings/scil/Turing-die-Maschine.mdx
+++ b/src/teachings/scil/Turing-die-Maschine.mdx
@@ -4,7 +4,7 @@ description: Einführung in die Turingmaschine, Beweise kommen später
 author: Jonas Schneider
 order: 2
 tags: [Einführung, Berechenbarkeit, Turingmaschine]
-date: 16/02/2023
+date: 20/02/2023
 ---
 
 ## Berechenbarkeit
@@ -138,3 +138,13 @@ Die Universelle Turingmaschine $U$ muss dann nur noch prüfen, ob die Eingabe ei
 > Eine Universelle TM kann eine 1-Band-TM in konstantem Zeitverlust simulieren.
 
 > $\langle M \rangle$ ist die Gödelnummer von $M$.   
+
+## Analyse
+
+Falls ihr **informell** beschreiben sollt, was eine Turingamschine macht, ist das meistens eher eine Text Beschreibung.
+
+Falls ihr aber nur beschreiben oder **formel** beschreiben sollt, was eine Turingmaschine macht, dann ist das meist das Angeben einer Funktion wie 
+
+$f(x) := \begin{cases} 1 & \text{wenn $x$ in mit 1 anfängt} \\ 0 & \text{sonst} \end{cases}$
+
+Dazu könnt ihr noch entwas erklären, aber meist ist auch tatsächlich die Funktion gefragt.
