--- a/src/pages/updates.mdx
+++ b/src/pages/updates.mdx
@@ -14,7 +14,7 @@ Ich werde mal wieder HTWR machen. Zumindest für [Stocha](/wsi) und [Malo](/cigo
 Ich werde versuchen es leichter zu machen selber Sachen zu schreiben, zu korrigieren etc.
 
 Für Fächer, die jetzt schon da sind also MALO, STOCHA, DATCOM, BUK, SWT ist es ziemlich einfach an den Zusammenfassungen zu arbeiten.
-Es gibt im git repo einen Ordner `/teachings`. Hier sind die Sachen in Institute geordnet.
+Es gibt im [git repo](https://github.com/JohnnyS318/htwr-aachen.de) einen Ordner `/teachings`. Hier sind die Sachen in Institute geordnet.
 Ein neue Datei wird direkt erkannt und auf der Seite angezeigt.
 
 Die Schreibweise ist einfach Markdown. Es gibt Cheat Sheets im  [Internet](https://www.markdownguide.org/cheat-sheet/).
