--- a/teachings/wsi/Ich dichte, du dichtest, gauß ist am dichtesten.mdx
+++ b/teachings/wsi/Ich dichte, du dichtest, gauß ist am dichtesten.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Zufallsverteilungen"
-description: Hier brauche ich noch eine Beschreibung
+title: Ich dichte, du dichtest, Gauß ist am Dichtesten (Zufallsverteilung/dichten)
+description: Haha Stocha macht Spaß und ist überhaupt nicht unnötig aufgeblasen mit x dummen Begriffen haha
 author: Jonas Schneider
-date: 17/07/2023
+date: 18/07/2023
 order: 3
 tags: [Zufallsverteilungen, Diskret, Stetig, Erwartungswert, Verteilungsfunktion, Dichte]
 ---
