Konvergenz und Glob

--- a/teachings/wsi/Vectorrrr.mdx
+++ b/teachings/wsi/Vectorrrr.mdx
@@ -4,7 +4,7 @@ description: Ohh-yeahhhh
 author: Jonas Schneider
 date: 18/07/2023
 order: 4
-tags: [Zufallsvektoren, Erwartungsvektoren, Bedingte Dichte, Kovarianz, Tschebyschow-Ungleichung]
+tags: [Zufallsvektoren, Erwartungsvektoren, Bedingte Dichte, Kovarianz]
 ---
 
 # Zufallsvektoren
