--- a/teachings/wsi/Inferenzstatistik.mdx
+++ b/teachings/wsi/Inferenzstatistik.mdx
@@ -4,7 +4,7 @@ description: KP
 author: Jonas Schneider
 date: 18/07/2023
 order: 7
-tags: []
+tags: [Inferenzstatistik, Statistik, Likelihood]
 ---
 
 ## Wasdas
@@ -23,19 +23,30 @@ Die Vorlesung gibt 3. gute Schritte:
 
 
 ### Grundbegriffe
-  $X = \{X(w) | w \in \Omega\} \subset \mathbb{R}^n ist der Stichprobenraum
-  $x = (x_1, ..., x_n) \in X$ ist eine Stichprobe
+  $X = \{X(w) | w \in \Omega\} \subset \mathbb{R}^n ist der **Stichprobenraum**
+  $x = (x_1, ..., x_n) \in X$ ist eine **Stichprobe**
 
   $X$ ist eine Zufallsvariable, $x$ ist eine Realisierung der Zufallsvariable $X$.
-  $\mathcal{P}$ heißt Verteilungsmodell auf $\mathbb{R}^n$ genauer heißt es parametrisches Verteilungsmodell, falls $\mathcal{P} = \{ \mathcal{P}_\vartheta | \vartheta \in \Theta\}$ wobei $\Theta$ eine Menge von Parametervektoren für die Verteilungen sind.
+  $\mathcal{P}$ heißt Verteilungsmodell auf $\mathbb{R}^n$ genauer heißt es **parametrisches Verteilungsmodell**, falls $\mathcal{P} = \{ \mathcal{P}_\vartheta | \vartheta \in \Theta\}$ wobei $\Theta$ eine Menge von Parametervektoren für die Verteilungen sind.
 
-  Falls es nicht endlichdimensional parametrisiert werden kann heißt es nichtparametrisches Verteilungsmodell.
+  Falls es nicht endlichdimensional parametrisiert werden kann heißt es **nichtparametrisches Verteilungsmodell**.
 
 
 ### Statistik
-  Dummer Name:
+  Dummer Name
 
-  Eine Statistik ist eine messbare Abbildung $T: \mathbb{R}^n \rightarrow \mathbb{R}^d$, wobei oft $d = 1$
-  Wenn T in den Parameterraum $\Theta$ abbildet, heißt sie Schätzer.
+  Eine **Statistik** ist eine messbare Abbildung $T: \mathbb{R}^n \rightarrow \mathbb{R}^d$, wobei oft $d = 1$
 
-  
+  Wenn T in den Parameterraum $\Theta$ abbildet, heißt sie **Schätzer**.
+
+  die **empirische Verteilungsfunktion** ist wie bereits gesagt: $\~{F}_n(x) = \frac{1}{n} \sum_{i=1}^n \mathbb{1}_{(-\infty, x]}(X_i)$. Das ist einfach eine tolle Schreibweise um zu sagen:
+  Gegeben ein Wert $x$, wie viele Datewerte sind kleiner oder gleich $x$. es ist einfach zählen, die Anzahl dann noch relativ zu Gesamtdatenmenge und fertig.
+
+  Es gilt: $E(\~{F}_n(x)) = P(X_i \le x) = F(x), Var(\~{F}_n(x)) = \frac{F(x)(1-F(x))}{n}$. Zudem konvergiert $\~{F}_n(x)$ immer gegen $F(x)$.
+
+
+### Likelihood-Prinzip und Funktionen
+
+  Ist ein Schätzprinzip und sagt, dass die beste Schätzung diejenige ist, die die beobachteten Daten am wahrscheinlichsten macht.
+  Hierfür gibt es mehrere Funktionen und Dichten, aber ich würde das weglassen
+
