feat: stocha teachings

--- a/teachings/wsi/Konvergenz.mdx
+++ b/teachings/wsi/Konvergenz.mdx
@@ -2,7 +2,7 @@
 title: Konvergenz
 description: KP
 author: Jonas Schneider
-date: 18/07/2023
+date: 19/07/2023
 order: 5
 tags: [Gesetz der Großen Zahlen, Tschebyschow-Ungleichung, Konvergenz, Hauptsatz der Statistik]
 ---
@@ -33,6 +33,8 @@ Schlechte Nachricht: Irgendwas aus diesem Kapitel wird dran kommen.
       - $X_n \overset{P}{\to} a, n \to \infty$, $Y_n \overset{P}{\to} b, n \to \infty$, dann: $\lambda X_n \pm \psi Y_n \overset{P}{\to} \lambda a \pm \psi b$ für $\lambda, \psi \in \mathbb{R}$ und $X_n \cdot Y_n \overset{P}{\to} a \cdot b$
       - $X_n \overset{P}{\to} a, n \to \infty$ und $g: \mathbb{R} \to \mathbb{R}$ stetig, dann: $g(X_n) \overset{P}{\to} g(a), n \to \infty$
   
+    Die Unterscheidet sich von der Konvergenz aus AFI, da wir hier über Wahr.keiten reden. Am Ende  ist die Wahrscheinlichkeit das sie Konvergieren 1. 
+
   - **Starkes Gesetz der Großen Zahlen**: Das Arithmetische Mittel $\frac{1}{n} \sum_{i=1}^n X_i$ konvergiert gegen den Erwartungswert $\mu$ mit Wahrscheinlichkeit 1.
 
   - **Hauptsatz der Statistik**: Sei die Folge nach der Verteilungsfunktion $F$ verteilt. Dann gilt:
