--- a/teachings/wsi/Der_Anfang_vom_Anfang.mdx
+++ b/teachings/wsi/Der_Anfang_vom_Anfang.mdx
@@ -2,9 +2,9 @@
 title: "Im Anfang schuf Gott Himmel und Erde"
 description: Gar Kein Bock
 author: Jonas Schneider
-date: 17/07/2023
+date: 20/07/2023
 order: 1
-tags: [Ereignisse, Grundbegriffe, Wahrscheinlichkeit, Zufallsvariablen, Urnen]
+tags: [Ereignisse, Grundbegriffe, Wahrscheinlichkeit, Zufallsvariablen, Urnen, Sigma-Algebra]
 ---
 
 # Noten Würfeln nach Aachener Art
@@ -37,6 +37,7 @@ Weitere Grundbegriffe die immer wieder vorkommen:
 - **Verteilung** $F_X$ ist eine Funktion, die an jeder Stelle $x$ die Wahrscheinlichkeit $P(X \leq x)$ angibt
 - **Dichte** $P[a,b] := \int_a^b f(x) dx$ ist die Wahrscheinlichkeit, dass eine Zufallsvariable $X$ einen Wert zwischen $a$ und $b$ annimmt. $f_X(x) = F_X'(x)$
 - **Unabhängigkeit** $X$ und $Y$ sind unabhängig, wenn $P(X \leq x, Y \leq y) = P(X \leq x) \cdot P(Y \leq y)$
+- **Wahrscheinlichkeitsmaß** $P$ ist eine Funktion, die jedem Ereignis $A$ eine Wahrscheinlichkeit $P(A)$ zuordnet. $P: \mathcal{A} \to [0,1]$. Die Kriterien sind: $0 \le P(A) \le 1 \forall A \in \Omega$, $P(\Omega)= 1$ und wenn $A_1, ..., A_n$ disjunkt gilt. $P(\bigcup_{i \in \underline{n}} A_i) = \sum_{i=1}^n P(A_i)$
 
 ## Problemthema Zufallsvariablen
 In praktisch allen Bereichen begegnen uns bald _Zufallsvariablen_. Hier stellt sich häufig die Frage...
@@ -70,4 +71,15 @@ Es gibt sehr viele Versionen, die sich wie folgt Unterscheiden:
 - Mit / Ohne Zurücklegen
 - Mit / Ohne Reihenfolge
 
+|                  | Mit Zurücklegen                                                                                                     | Ohne Zurücklegen                                                                                                                                |
+|------------------|---------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------|
+| Mit Reihenfolge  | $\Omega = \{(w_1, ..., w_n) \mid w_i \in A\} \\ \lvert \Omega \rvert = N^n$                                                  | $\Omega =  \{ (w_1, ..., w_n) \mid w_i \in A, \\ w_i \neq w_j \quad \mathrm{ für } \quad  i \neq j \}  \\ \lvert \Omega \rvert = \frac{N!}{(N-n)!} = N \cdot (N-1) \cdot N(N-n+1) $ |
+| Ohne Reihenfolge | $\Omega =  \{ (w_1, ..., w_n) \mid w_i \in A, i=1,...,n, w_1 \le ... \le w_n \}  \\ \lvert \Omega \rvert = \binom{N+n-1}{n}$ | $\Omega =  \{ {w_1, ..., w_n} \mid w_i \in \{1, ..., n\}, \\ w_i \neq w_j \quad \mathrm{für} \quad i \neq j \}  \\ \lvert \Omega \rvert = \binom{N+n-1}{n}$                       |
+
+
+## $\sigma$-Algebra
+Eine $\sigma$-Algebra ist eine Menge von Ereignissen, die folgende Eigenschaften erfüllt:
+- $\Omega \in \mathcal{A}$
+- $A \in \mathcal{A} \implies \overline{A} \in \mathcal{A}$ (Abgeschlossen unter Komplementbildung)
+- $A_1, ..., A_n \in A \implies \bigcup_{i=1}^n A_i \in A$. (Abgeschlossen unter Vereinigung)
 
