--- a/teachings/wsi/Vectorrrr.mdx
+++ b/teachings/wsi/Vectorrrr.mdx
@@ -22,7 +22,7 @@ Ich schreibe hier jetzt $X$ für einen Vektor. Auch hierfür gibt es natürlich 
 Die Eigenschaften der Verteilungsfunktion sind gleich zu den eindimensionalen nur halt eben für Vektoren.
 
 - **Produktverteilung**: $X_i \sim F_i(x)
-  $F(x_1, ..., x_n) = F_1(x_1) \cdot ... \cdot F_n(x_n)$
+  F(x_1, ..., x_n) = F_1(x_1) \cdot ... \cdot F_n(x_n)$
   Hier sind alle $X_1, ..., X_n$ stoch. unabhängig.
 
 ## Diskrete Zufallsvektoren
@@ -30,14 +30,14 @@ Die Eigenschaften der Verteilungsfunktion sind gleich zu den eindimensionalen nu
   Auch hier gibt es wieder eine Zähldichte/Wahrscheinlichkeitsfunktion: $p_X: \mathbb{R}^n \to [0,1], p_X(x) = P(X = x)$
 
 
-  **Produktzähldichte**: Sind $p_1(x), ..., p_n(x)$ Zähldichten dann ist: $p(x_1, ..., x_n) = p(x_1) \cdot ... \cdot p(x_n)$
+  **Produktzähldichte**: Sind $p_1(x), ..., p_n(x)$ Zähldichten, dann ist: $p(x_1, ..., x_n) = p(x_1) \cdot ... \cdot p(x_n)$
 
 ## Stetige Zufallsvektoren
 
-  Die werden sehr schnell sehr doof, da sie nach eine Funktion $f_X(x_1, ..., x_n)$ verteilt sind also:
+  Die werden sehr schnell sehr doof, da sie nach einer Funktion $f_X(x_1, ..., x_n)$ verteilt sind also:
   $P(X \in (a,b])= P(a_1 < X_1 \le b_1, ..., a_n < X_n \le b_n) = \int_{a_n}^{b_n}...\int_{a_1}^{b_1} f_X(x_1, ..., x_n)dx_1 ... dx_n$
 
-  Die dichte ist analog wie vorher definiert.
+  Die Dichte ist analog wie vorher definiert.
 
 ## Bedingte Verteilungen / Dichten
   
@@ -46,18 +46,18 @@ Die Eigenschaften der Verteilungsfunktion sind gleich zu den eindimensionalen nu
 
   $p_{X \mid Y}(x \mid y) = P(X =x \mid Y = y) = \begin{cases} \frac{p(x,y)}{p_Y(y)} & y \in \{ y_1, y_2, ...\} \\ p_X(x) & y \notin \{y_1, ...\} \end{cases}$
 
-  für stetige ZV. ist es analog definiert nur mit f(x) als Dichtefunktion statt der Zähldichte:
+  für stetige ZV ist es analog definiert nur mit $f(x)$ als Dichtefunktion statt der Zähldichte:
 
   $f_{X \mid Y}(x \mid y) = \begin{cases} \frac{f(x,y)}{f_Y(y)} & f_Y(y) > 0 \\ f_X(x) & f_Y(y) = 0 \end{cases}$
 
-  Aber was heißt das jetzt? Das ist die Zähldichte/Dichtefunktion von X wenn y gegeben ist.
+  Aber was heißt das jetzt? Das ist die Zähldichte/Dichtefunktion von $X$, wenn $y$ gegeben ist.
   Wieder als Beispiel: Mein PC stürzt (ganz hypothetisch) immer Montags zwischen 10:00 und 18:00 ab. Aber wenn ich im Urlaub bin und er ausgeschaltet ist, ändert das natürlich die Dichtefunktion bedeutend.
 
   Als Notation wird $X | Y = y \sim f_{X|Y}(x|y)$ bzw. $X|Y = y \sim p_{X|Y}(x|y)$ verwendet
 
 
   Als **Test** ob stoch. unabhängig gibt:
-    $p_{X|Y}(x|y) = p_X(x) und p_{Y|X}(y|x) = p_Y(y)$ für alle x und y ebenso für stetige.
+    $p_{X|Y}(x|y) = p_X(x)$ und $p_{Y|X}(y|x) = p_Y(y)$ für alle $x$ und $y$ ebenso für stetige.
 
   Aber leichter ist das _Produktkriterium_:
     $F_{X,Y}(x,y) = F_X(x) \cdot F_Y(y)$ für alle x,y 
@@ -78,8 +78,8 @@ Die Eigenschaften der Verteilungsfunktion sind gleich zu den eindimensionalen nu
 
   n-dimensional standardnormalverteilt heißt $X \sim N_n(0, I)$. Dann gilt auch:
 
-  $Y = X + \mu \sim N_n(\mu, I)
+  $Y = X + \mu \sim N_n(\mu, I)$
 
-  Es gibt zwar noch Multivariate Normalverteilung ohne standard aber die will niemand hoffe ich.
+  Es gibt zwar noch Multivariate Normalverteilung ohne Standard aber die will niemand hoffe ich.
 
 
