--- a/teachings/wsi/Ich dichte, du dichtest, gauß ist am dichtesten.mdx
+++ b/teachings/wsi/Ich dichte, du dichtest, gauß ist am dichtesten.mdx
@@ -9,11 +9,11 @@ tags: [Zufallsverteilungen, Diskret, Stetig, Erwartungswert, Verteilungsfunktion
 
 ## Aufteilungen
 
-Wichtigster unterschied zwischen mehreren Verteilung ist, ob sie diskret oder stetig sind. Dies gilt genauso für die darunterliegende Zufallsvariable
+Wichtigster unterschied zwischen mehreren Verteilung ist, ob sie diskret oder stetig sind. Dies gilt genauso für die darunterliegende Zufallsvariable.
 
-Eine Zufallsvariable heißt diskret, wenn $X = \{X(w) \mid w \in \Omega\}$ abzählbar ist. Zudem gilt natürlich wenn $\Omega$ diskret ist, sind alle ZV. das auch.
+Eine Zufallsvariable heißt diskret, wenn $X = \{X(w) \mid w \in \Omega\}$ abzählbar ist. Zudem gilt natürlich wenn $\Omega$ diskret ist, sind alle ZV das auch.
 
-stetig ist dann natürlich so was wie $X \subseteq \mathbb{R}$ 
+Stetig ist dann natürlich so was wie $X \subseteq \mathbb{R}$.
 
 ## Erwartung gleich 0
 
@@ -30,13 +30,13 @@ Es gibt folgende Rechenregeln:
 
 ### Diskrete ZV
 
-$E(X) = \int_{-\infty}{\infty} x p_X(x) dx$
+$E(X) = \int_{-\infty}^{\infty} x p_X(x) dx$
 
-Wobei $p_X$ die **Zähldichte** von X. Also $p_X(x) = P(X = x)$. Beispiel:
+Wobei $p_X$ die **Zähldichte** von $X$. Also $p_X(x) = P(X = x)$. Beispiel:
 Bei Würfel 6 gewinnst du 1€ sonst verlierst du.
 Dann ist die Zähldichte:
 
-$p_X(x) = \begin{cases} \frac{5}{6}, & x = 0 \\ \frac{1}{6}, & x = 1 \\ 0, & sonst \end{cases}$
+$p_X(x) = \begin{cases} \frac{5}{6}, & x = 0 \\ \frac{1}{6}, & x = 1 \\ 0, & \text{sonst} \end{cases}$
 
 ### Stetige ZV
 
@@ -50,16 +50,16 @@ Notation $X \sim f_x$ hat Dichte
 
 
 ### Varianz
-  Die Varianz berechnet sich durch $\sigma_X^2 = Var(X) = E((X - E(X))^2)
+  Die Varianz berechnet sich durch $\sigma_X^2 = Var(X) = E((X - E(X))^2)$
   Das wichtigste sit der **Verschiebungssatz**:
 
-  $Var(X) = E(X^2) - (E(X))^2
+  $Var(X) = E(X^2) - (E(X))^2$
 
   Weitere Rechenregeln:
 
-  - Var(aX) = a^2Var(X)
-  - E(X) = 0 \implies Var(X) = E(X^2)
-  - X,Y stoch. unabhängig $\implies Var(X + Y) = Var(X) + Var(Y)
+  - $Var(aX) = a^2Var(X)$
+  - $E(X) = 0 \implies Var(X) = E(X^2)$
+  - $X,Y$ stoch. unabhängig $\implies Var(X + Y) = Var(X) + Var(Y)$
 
 ## Dichtetransformationssatz
 Sei $f_X(x)$ eine Dichtefunktion für $X=(a,b), a < b$ und sei $g(x) = y$ eine stetig differenzierbare Funktion mit Umkehrfunktion $g^{-1}(y) = x$.
@@ -70,11 +70,11 @@ Ist vermutlich nicht das wichtigste aber trotzdem ganz nett.
 
 ## Verteilungen
 
-Das Problem: Stocha ist sehr unübersichtlich. Schon allein bei der Bezeichnung der ganzen Verteilungen die jetzt gleich runtergeratert werden, gibt es unterschiedliche Benennungen. Ich werde es hier einheitlich halten.
-Ihr müsst diese ganzen Sachen überhaupt nicht auswendig könne. Ihr müsst nur wissen, dass sie existieren.
+Das Problem: Stocha ist sehr unübersichtlich. Schon allein bei der Bezeichnung der ganzen Verteilungen die jetzt gleich runtergerattert werden, gibt es unterschiedliche Benennungen. Ich werde es hier einheitlich halten.
+Ihr müsst diese ganzen Sachen überhaupt nicht auswendig können. Ihr müsst nur wissen, dass sie existieren.
 
-Verteilungsfunktionen werden mit $F_X(x)$ geschrieben für sie gilt:
-$F_X(x) = \int_{-\infty}{x} f_X(t) dt, x \in \mathbb{R}$
+Verteilungsfunktionen werden mit $F_X(x)$ geschrieben, für sie gilt:
+$F_X(x) = \int_{-\infty}^{x} f_X(t) dt, x \in \mathbb{R}$
 
 Somit gilt: $P(X \le x) = F_X(x)$ und $P(a < X \le b) = F_X(b) - F_X(a)$
 
@@ -85,7 +85,7 @@ $\lim_{x \to -\infty} F_X(x) = 0$ und $\lim_{x \to \infty} F_X(x) = 1$
 ### Diskrete Verteilungen
 
 - **Binomial Verteilung**:
-  $X \sim Bin(n,p)$ heißt Binomialverteilt es kommt natürlich vom Binomialkoeffizienten. <br/>
+  $X \sim Bin(n,p)$ heißt Binomialverteilt, es kommt natürlich vom Binomialkoeffizienten. <br/>
   $P(X = k) = p_X(k) = \binom{n}{k} p^k (1-p)^{n-k}$ mit Parameter $n \in \mathbb{N}$ und $p \in [0,1]$
   
   Erwartungswert: $E(X) = np$ <br/>
@@ -98,12 +98,12 @@ $\lim_{x \to -\infty} F_X(x) = 0$ und $\lim_{x \to \infty} F_X(x) = 1$
   Varianz: $Var(X) = p(1-p)$ <br/>
 
 - **Poisson Verteilung**:
-  $X \sim Pois(\lambda)$ <br/>
+  $X \sim Poi(\lambda)$ <br/>
   $P(X = k) = p_X(k) = \frac{\lambda^k}{k!} e^{-\lambda}$ mit Parameter $\lambda > 0$ <br/>
 
   Erwartungswert: $E(X) = \lambda$ <br/>
   Varianz: $Var(X) = \lambda$ <br/>
-  Rechenregel: $X \sim Pois(\lambda_1), Y \sim Pois(\lambda_2) unabhängig \implies X + Y \sim Pois(\lambda_1 + \lambda_2)$
+  Rechenregel: $X \sim Pois(\lambda_1), Y \sim Pois(\lambda_2)$ unabhängig $\implies X + Y \sim Pois(\lambda_1 + \lambda_2)$
 
 - **Geometrische Verteilung**: Siehe Formelsammlung
 - **Hypergeometrische Verteilung**: Siehe Formelsammlung
@@ -113,7 +113,7 @@ $\lim_{x \to -\infty} F_X(x) = 0$ und $\lim_{x \to \infty} F_X(x) = 1$
 ### Stetige Verteilungen
 - **Gleichverteilung**
   $X \sim U(a,b)$ <br/>
-  $f_X(x) = \begin{cases} \frac{1}{b-a}, & a < x < b \\ 0, & sonst \end{cases}$
+  $f_X(x) = \begin{cases} \frac{1}{b-a}, & a < x < b \\ 0, & \text{sonst} \end{cases}$
 
   Erwartungswert: $E(X) = \frac{a+b}{2}$ <br/>
   Varianz: $Var(X) = \frac{(b-a)^2}{12}$ <br/>
@@ -125,7 +125,7 @@ $\lim_{x \to -\infty} F_X(x) = 0$ und $\lim_{x \to \infty} F_X(x) = 1$
 
   Erwartungswert: $E(X) = \frac{1}{\lambda}$ <br/>
   Varianz: $Var(X) = \frac{1}{\lambda^2}$ <br/>
-  Verteilungsfunktion: $F_X(x) = \begin{cases} 1 - e^{-\lambda x}, & x \ge 0 \\ 0, & sonst \end{cases}$
+  Verteilungsfunktion: $F_X(x) = \begin{cases} 1 - e^{-\lambda x}, & x \ge 0 \\ 0, & \text{sonst} \end{cases}$
 
 - **Normalverteilung**
   $X \sim N(\mu, \sigma^2)$ <br/>
@@ -133,11 +133,11 @@ $\lim_{x \to -\infty} F_X(x) = 0$ und $\lim_{x \to \infty} F_X(x) = 1$
 
   Erwartungswert: $E(X) = \mu$ <br/>
   Varianz: $Var(X) = \sigma^2$ <br/>
-  Verteilungsfunktion: $F_X(x) = \Phi_{(\mu, \sigma^2)}(x) = \int_{\infty}^x \varphi_{(\mu, \sigma^2)(t) dt}$ <br/>
+  Verteilungsfunktion: $F_X(x) = \Phi_{(\mu, \sigma^2)}(x) = \int_{\infty}^x \varphi_{(\mu, \sigma^2)}(t) dt$ <br/>
 
   Wichtiges zu beachten: <br/>
     
-    - Bei der Normalverteilung ließt man meistens Werte von einer Tabelle ab. Da ihr sicher nicht diese Formel mit dem Ubuntu Taschenrechner ausrechnen wollt.
+    - Bei der Normalverteilung liest man meistens Werte von einer Tabelle ab. Da ihr sicher nicht diese Formel mit dem Ubuntu Taschenrechner ausrechnen wollt.
     - Wie das genau geht kommt unten. 
     - Die **Standardnormalverteilung** hat die Parameter $\mu = 0, \sigma^2 = 1$ und wird mit $\Phi$ und $\varphi$ bezeichnet.
   
