--- a/teachings/wsi/Inferenzstatistik.mdx
+++ b/teachings/wsi/Inferenzstatistik.mdx
@@ -9,27 +9,27 @@ tags: [Inferenzstatistik, Statistik, Likelihood]
 
 ## Wasdas
 
-Nehme an wir hätten eine Umfrage gemacht: 50 Leute wurden gefragt, ob sie _AFI_ mögen. 45 Davon sagen ja sehr. 5 sagen nein. 
+Nehme an wir hätten eine Umfrage gemacht: 50 Leute wurden gefragt, ob sie _AFI_ mögen. 45 davon sagen ja sehr. 5 sagen nein. 
 Jetzt müssen wir diese Umfrage bewerten. Wie gut ist die Stichprobe, wie kann ich nachweisen, dass der Anteil der Leute, die _AFI_ mögen, wirklich so hoch ist?
 
 <Spoiler>
 kannst du nicht.
 </Spoiler>
 
-Die Vorlesung gibt 3. gute Schritte:
+Die Vorlesung gibt 3 gute Schritte:
 1. Finde ein geeignetes Verteilungsmodell: $Bin(n,p), n = 50$
 2. Finde die optimalen Parameter: $p$.
 3. Wie kann ich die Hypothese testen, und ist $p > 0.5$ nachweisbar?
 
 
 ### Grundbegriffe
-  $X = \{X(w) | w \in \Omega\} \subset \mathbb{R}^n ist der **Stichprobenraum**
+  $X = \{X(w) | w \in \Omega\} \subset \mathbb{R}^n$ ist der **Stichprobenraum**
   $x = (x_1, ..., x_n) \in X$ ist eine **Stichprobe**
 
   $X$ ist eine Zufallsvariable, $x$ ist eine Realisierung der Zufallsvariable $X$.
-  $\mathcal{P}$ heißt Verteilungsmodell auf $\mathbb{R}^n$ genauer heißt es **parametrisches Verteilungsmodell**, falls $\mathcal{P} = \{ \mathcal{P}_\vartheta | \vartheta \in \Theta\}$ wobei $\Theta$ eine Menge von Parametervektoren für die Verteilungen sind.
+  $\mathcal{P}$ heißt Verteilungsmodell auf $\mathbb{R}^n$, genauer heißt es **parametrisches Verteilungsmodell**, falls $\mathcal{P} = \{ \mathcal{P}_\vartheta | \vartheta \in \Theta\}$ wobei $\Theta$ eine Menge von Parametervektoren für die Verteilungen sind.
 
-  Falls es nicht endlichdimensional parametrisiert werden kann heißt es **nichtparametrisches Verteilungsmodell**.
+  Falls es nicht endlichdimensional parametrisiert werden kann, heißt es **nichtparametrisches Verteilungsmodell**.
 
 
 ### Statistik
@@ -37,10 +37,10 @@ Die Vorlesung gibt 3. gute Schritte:
 
   Eine **Statistik** ist eine messbare Abbildung $T: \mathbb{R}^n \rightarrow \mathbb{R}^d$, wobei oft $d = 1$
 
-  Wenn T in den Parameterraum $\Theta$ abbildet, heißt sie **Schätzer**.
+  Wenn $T$ in den Parameterraum $\Theta$ abbildet, heißt sie **Schätzer**.
 
-  die **empirische Verteilungsfunktion** ist wie bereits gesagt: $\~{F}_n(x) = \frac{1}{n} \sum_{i=1}^n \mathbb{1}_{(-\infty, x]}(X_i)$. Das ist einfach eine tolle Schreibweise um zu sagen:
-  Gegeben ein Wert $x$, wie viele Datewerte sind kleiner oder gleich $x$. es ist einfach zählen, die Anzahl dann noch relativ zu Gesamtdatenmenge und fertig.
+  Die **empirische Verteilungsfunktion** ist wie bereits gesagt: $\~{F}_n(x) = \frac{1}{n} \sum_{i=1}^n \mathbb{1}_{(-\infty, x]}(X_i)$. Das ist einfach eine tolle Schreibweise um zu sagen:
+  Gegeben ein Wert $x$, wie viele Datewerte sind kleiner oder gleich $x$. Es ist einfach zählen, die Anzahl dann noch relativ zu Gesamtdatenmenge und fertig.
 
   Es gilt: $E(\~{F}_n(x)) = P(X_i \le x) = F(x), Var(\~{F}_n(x)) = \frac{F(x)(1-F(x))}{n}$. Zudem konvergiert $\~{F}_n(x)$ immer gegen $F(x)$.
 
