--- a/teachings/wsi/Konvergenz.mdx
+++ b/teachings/wsi/Konvergenz.mdx
@@ -2,13 +2,13 @@
 title: Konvergenz
 description: KP
 author: Jonas Schneider
-date: 19/07/2023
+date: 24/07/2023
 order: 5
 tags: [Gesetz der Großen Zahlen, Tschebyschow-Ungleichung, Konvergenz, Hauptsatz der Statistik]
 ---
 
 Gute Nachricht: Ich denke viel komplizierter wird es nicht mehr. Freut euch auf Boxplots. 
-Schlechte Nachricht: Irgendwas aus diesem Kapitel wird dran kommen.
+Schlechte Nachricht: Irgendwas aus diesem Kapitel wird dran kommen. Vermutlich aber nur eine Abschätzung mit der Tschebyschow-Ungleichung.
 
 ## Gesetz der großen Zahlen
 
